Tried to squish a few bugs, no success

--- a/Project 3/style.css
+++ b/Project 3/style.css
@@ -110,7 +110,7 @@ main-content {
   width: 45%;
   margin: 2.5%;
   height: 85%;
-  padding: 0;
+  padding: 5px;
   font-family: 'Cormorant', serif;
   font-size: 18px;
   background-color: black;
